# Statilytics-v1.0

./: .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  USER_MANUAL.html  ci.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  statilytics_studio_v1.0.py  test_engine_basic.py
